[package]
name = "gh-inbox"
version = "0.4.2"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
rand = "0.9"
anyhow = "1"

[profile.release]
strip = true
lto = true
